--- a/index.html
+++ b/index.html
@@ -55,18 +55,17 @@
     <meta property="og:url" content="https://www.guymann.com/">
     <meta property="og:title" content="Guy Mann - Developer & UI/UX Designer">
     <meta property="og:description" content="Professional portfolio showcasing innovative web development and design expertise.">
-    <meta property="og:image" content="https://www.guymann.com/images/og-image.jpg">
+    <meta property="og:image" content="img/poster2.jpg">
 
     <!-- Twitter (X) meta tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://www.guymann.com/">
     <meta name="twitter:title" content="Guy Mann - Developer & UI/UX Designer">
     <meta name="twitter:description" content="Professional portfolio showcasing innovative web development and design expertise.">
-    <meta name="twitter:image" content="https://www.guymann.com/images/twitter-image.jpg">
+    <meta name="twitter:image" content="img/poster2.jpg">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="img/me.png">
 
     <!-- External stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
