--- a/index.html
+++ b/index.html
@@ -297,8 +297,8 @@
                     <h3 class="project-title">E-commerce Platform</h3>
                     <p class="project-description">A full-featured e-commerce platform with real-time inventory, secure payments, and admin dashboard.</p>
                     <div class="project-links">
-                        <a href="#" class="project-link primary">View Live</a>
-                        <a href="#" class="project-link secondary">Source Code</a>
+                        <a href="#" class="project-link primary">Demo</a>
+                        <a href="#" class="project-link secondary">Code</a>
                     </div>
                 </div>
             </div>
@@ -315,8 +315,8 @@
                     <h3 class="project-title">Analytics Dashboard</h3>
                     <p class="project-description">Real-time data visualization platform with customizable widgets and automated reporting features.</p>
                     <div class="project-links">
-                        <a href="#" class="project-link primary">View Demo</a>
-                        <a href="#" class="project-link secondary">Case Study</a>
+                        <a href="#" class="project-link primary">Demo</a>
+                        <a href="#" class="project-link secondary">Case</a>
                     </div>
                 </div>
             </div>
@@ -333,8 +333,8 @@
                     <h3 class="project-title">FitTrack Pro</h3>
                     <p class="project-description">Cross-platform fitness tracking app with personalized workout plans and progress analytics.</p>
                     <div class="project-links">
-                        <a href="#" class="project-link primary">App Store</a>
-                        <a href="#" class="project-link secondary">Learn More</a>
+                        <a href="#" class="project-link primary">AppStore</a>
+                        <a href="#" class="project-link secondary">More</a>
                     </div>
                 </div>
             </div>
