--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
     <meta property="og:url" content="https://www.guymann.com/">
     <meta property="og:title" content="Guy Mann - Developer & UI/UX Designer">
     <meta property="og:description" content="Professional portfolio showcasing innovative web development and design expertise.">
-    <meta property="og:image" content="img/poster2.jpg">
+    <meta property="og:image" content="poster1.jpg">
 
     <!-- Twitter (X) meta tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://www.guymann.com/">
     <meta name="twitter:title" content="Guy Mann - Developer & UI/UX Designer">
     <meta name="twitter:description" content="Professional portfolio showcasing innovative web development and design expertise.">
-    <meta name="twitter:image" content="img/poster2.jpg">
+    <meta name="twitter:image" content="poster1.jpg">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="img/me.png">
